@@ -1,6 +1,6 @@
 [package]
 name = "easy-error"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Nathan Kent <nate@nkent.net>"]
 edition = "2018"
 
